# qqbot

./: .gitignore  main.py  openai.py  pyrightconfig.json  qqapi.py
src/: main.py  openai.py  qqapi.py
src/embedding/: ark_embedding.py
src/llm/: ark_llm.py  llm.py  openai_llm.py
src/native/: CMakeLists.txt  CMakePresets.json
src/native/src/: chat.cpp  pybind.cpp
